@@ -1,10 +1,9 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>fr.ufrst.m1info.pvm.group5</groupId>
         <artifactId>group5</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>2-SNAPSHOT</version>
     </parent>
 
     <artifactId>ast</artifactId>
@@ -32,6 +31,19 @@
                     </execution>
                 </executions>
             </plugin>
+            <!-- Plugin so we can use Mockito with Java 22 without errors -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.2.5</version>
+                <configuration>
+                    <argLine>
+                        --add-opens fr.ufrst.m1info.pvm.group5.ast/fr.ufrst.m1info.pvm.group5.ast.Nodes=ALL-UNNAMED
+                        --add-opens java.base/java.lang=ALL-UNNAMED
+                    </argLine>
+                </configuration>
+            </plugin>
+
         </plugins>
     </build>
 
@@ -44,8 +56,20 @@
         <dependency>
             <groupId>fr.ufrst.m1info.pvm.group5</groupId>
             <artifactId>memory</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>2-SNAPSHOT</version>
             <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.2</version>
+            <scope>test</scope>
+        </dependency>
+        <!-- Utilities for files for tests -->
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.19.0</version>
         </dependency>
     </dependencies>
 </project>
